Upgrade to LSC 2.2, jdk21+ and other libs, new schema version lsc-fusiondirectory-plugin-1.2.xsd, switch from HttpUrlConnectorProvider to JdkConnectorProvider, adapt sample lsc config files #20